.metadata/.plugins/org.eclipse.cdt.ui/Lexer.build.log

**** Build of configuration Debug for project Lexer ****

make all 
Building file: ../src/lex.yy.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/lex.yy.d" -MT"src/lex.yy.d" -o"src/lex.yy.o" "../src/lex.yy.c"
lexer.l: In function ‘main’:
lexer.l:108:2: error: unknown type name ‘string’
lexer.l:109:2: error: unknown type name ‘ifstream’
lexer.l:109:19: error: expected declaration specifiers or ‘...’ before string constant
lexer.l:110:6: error: ‘myfile’ undeclared (first use in this function)
lexer.l:110:6: note: each undeclared identifier is reported only once for each function it appears in
lexer.l:114:22: warning: passing argument 2 of ‘getline’ makes pointer from integer without a cast
In file included from lex.yy.c:19:0:
/usr/include/stdio.h:678:20: note: expected ‘size_t * __restrict__’ but argument is of type ‘int’
 extern _IO_ssize_t getline (char **__restrict __lineptr,
                    ^
lexer.l:114:6: error: too few arguments to function ‘getline’
In file included from lex.yy.c:19:0:
/usr/include/stdio.h:678:20: note: declared here
 extern _IO_ssize_t getline (char **__restrict __lineptr,
                    ^
lexer.l:115:6: error: ‘cout’ undeclared (first use in this function)
lexer.l:115:22: error: ‘endl’ undeclared (first use in this function)
lexer.l:129:15: error: ‘PROG’ undeclared (first use in this function)
lexer.l:128:7: warning: unused variable ‘env’ [-Wunused-variable]
lexer.l: At top level:
lex.yy.c:1371:17: warning: ‘yyunput’ defined but not used [-Wunused-function]
lex.yy.c:1413:16: warning: ‘input’ defined but not used [-Wunused-function]
make: *** [src/lex.yy.o] Ошибка 1
